# gpt-oss-20b-pro

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.toml  pyproject.toml  run-oss20b.ps1  start-llama-server.ps1
src/oss20b_pro/: __init__.py  app.py  config.py  logging_setup.py
src/oss20b_pro/checking/: __init__.py  format_controller.py
src/oss20b_pro/cli/: chat.py  commands.py  session.py  streaming.py
src/oss20b_pro/model/: __init__.py  backend_base.py  generation_profiles.py  harmony_prompt_builder.py  llama_server_backend.py  mock_backend.py  transformers_backend.py
src/oss20b_pro/routing/: effort_router.py  task_classifier.py
src/oss20b_pro/utils/: errors.py  paths.py
tests/: test_backend_errors.py  test_commands.py  test_config.py  test_llama_server_backend.py  test_prompt_builder.py  test_routing.py
